--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,17 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name" translatable="false" tools:ignore="MissingTranslation">toteco_app</string>
+<!--    Main activity   -->
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="sign_in">Sign in</string>
     <string name="register_placeholder">Register here if you do not have an account</string>
+<!--    Register activity-->
+    <string name="register">Register</string>
+    <string name="name">Name</string>
+    <string name="surname">Surname</string>
+    <string name="birthday">Birthday</string>
+    <string name="confirm_password">Confirm password</string>
+    <string name="error_field_empty">Fields can not be empty</string>
+    <string name="error_password">Both passwords must be the same</string>
+    <string name="user_create">User with username %s created.</string>
 </resources>
